feat: available game pagination